--- a/src/App/Bundle/SiteBundle/Resources/translations/messages.fr.yml
+++ b/src/App/Bundle/SiteBundle/Resources/translations/messages.fr.yml
@@ -10,3 +10,4 @@ app.filter.all: Tous
 app.filter.peinture: Peintures
 app.filter.dessin: Dessins
 app.filter.photo: Photographies
+app.title.no_element: Pas d'objet à afficher.
